# open-p4studio

./: README.md
.github/workflows/: ci-test-ubuntu.yml
p4studio/: install-cc-used-by-kernel-build.sh  p4studio
p4studio/dependencies/: dependencies.yaml  dependencies_command.py  dependency_installer.py
p4studio/dependencies/source/: install_grpc.py
p4studio/profile/: profile_command.py  profile_execution_plan.py
pkgsrc/bf-drivers/kdrv/: copy_ko.cmake
pkgsrc/bf-drivers/kdrv/bf_kdrv/: CMakeLists.txt
pkgsrc/bf-drivers/kdrv/bf_knet/: CMakeLists.txt
pkgsrc/bf-drivers/kdrv/bf_kpkt/: CMakeLists.txt  bf_kpkt_timer.c
pkgsrc/bf-drivers/src/bf_rt/bf_rt_p4/: bf_rt_p4_table_key_impl.cpp
pkgsrc/switch-p4-16/api/common/: pal.cpp  qos_pdfixed.cpp
pkgsrc/switch-p4-16/s3/: bf_rt_backend.cpp  log.h  record.cpp  smi.cpp  switch_store.cpp
pkgsrc/tofino-model/: CMakeLists.txt
pkgsrc/tofino-model/include/shared/: parser-counter-stack.h
pkgsrc/tofino-model/runner/: simulator_intf.c
pkgsrc/tofino-model/src/shared/: mau-snapshot-common.cpp
pkgsrc/tofino-model/tests/simple_test_harness/: map.h  ordered_map.h
