
project(bf_kdrv VERSION 0.1.0 LANGUAGES C)

set(DRIVER_FILE ${CMAKE_CURRENT_BINARY_DIR}/bf_kdrv.ko)
set(COPY_KO_SCRIPT ${CMAKE_CURRENT_LIST_DIR}/../copy_ko.cmake)
set(KBUILD_CMD $(MAKE) -C ${KERNELDIR} M=${CMAKE_CURRENT_SOURCE_DIR} MO=${CMAKE_CURRENT_BINARY_DIR} modules)
set(KBUILD_CLEAN $(MAKE) -C ${KERNELDIR} M=${CMAKE_CURRENT_SOURCE_DIR} MO=${CMAKE_CURRENT_BINARY_DIR} clean)

# build
add_custom_command(OUTPUT ${DRIVER_FILE}
  COMMAND ${KBUILD_CMD}
  COMMAND ${CMAKE_COMMAND}
          -DSRC_BUILD=${CMAKE_CURRENT_BINARY_DIR}/bf_kdrv.ko
          -DSRC_SOURCE=${CMAKE_CURRENT_SOURCE_DIR}/bf_kdrv.ko
          -DDST=${DRIVER_FILE}
          -P ${COPY_KO_SCRIPT}
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/bf_kdrv.c
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
add_custom_target(bf_kdrv ALL DEPENDS ${DRIVER_FILE})

# clean
add_custom_target(bf_kdrv_clean COMMAND ${KBUILD_CLEAN})

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/bf_kdrv.ko DESTINATION lib/modules)
