
project(bf_kpkt VERSION 0.1.0 LANGUAGES C)
include(CheckCXXCompilerFlag)

set(DRIVER_FILE ${CMAKE_CURRENT_BINARY_DIR}/bf_kpkt.ko)
set(COPY_KO_SCRIPT ${CMAKE_CURRENT_LIST_DIR}/../copy_ko.cmake)

set(KBUILD_CMD_EXTRA_CFLAGS -DBF_INCLUDE_KPKT -Werror)
CHECK_CXX_COMPILER_FLAG(-Wimplicit-fallthrough=2 COMPILER_SUPPORTS_IMPLICIT_FALLTHROUGH)
if (COMPILER_SUPPORTS_IMPLICIT_FALLTHROUGH)
  set(KBUILD_CMD_EXTRA_CFLAGS ${KBUILD_CMD_EXTRA_CFLAGS} -Wimplicit-fallthrough=2)
endif()

set(KBUILD_CMD $(MAKE) EXTRA_CFLAGS='${KBUILD_CMD_EXTRA_CFLAGS}' -C ${KERNELDIR} M=${CMAKE_CURRENT_SOURCE_DIR} MO=${CMAKE_CURRENT_BINARY_DIR} inc=${CMAKE_INSTALL_PREFIX}/include modules)
set(KBUILD_CLEAN $(MAKE) -C ${KERNELDIR} M=${CMAKE_CURRENT_SOURCE_DIR} MO=${CMAKE_CURRENT_BINARY_DIR} inc=${CMAKE_INSTALL_PREFIX}/include clean)

# build
add_custom_command(OUTPUT ${DRIVER_FILE}
  COMMAND ${KBUILD_CMD}
  COMMAND ${CMAKE_COMMAND}
          -DSRC_BUILD=${CMAKE_CURRENT_BINARY_DIR}/bf_kpkt.ko
          -DSRC_SOURCE=${CMAKE_CURRENT_SOURCE_DIR}/bf_kpkt.ko
          -DDST=${DRIVER_FILE}
          -P ${COPY_KO_SCRIPT}
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/bf_kpkt_net.c
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
add_custom_target(bf_kpkt ALL DEPENDS ${DRIVER_FILE})

# clean
add_custom_target(bf_kpkt_clean COMMAND ${KBUILD_CLEAN})

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/bf_kpkt.ko DESTINATION lib/modules)
